@@ -1,6 +1,6 @@
 /****************************************************************************
 
-	Objects3D    Copyright (C) 2014 Andre Deperrois adeperrois@xflr5.com
+	Objects3D    Copyright (C) 2014-2017 Andre Deperrois adeperrois@xflr5.com
 
 	This program is free software; you can redistribute it and/or modify
 	it under the terms of the GNU General Public License as published by
